6-01-2001  Andrew H. Chatham <andrew.chatham@duke.edu>
	* src/pyvorbisinfo.c  (py_comment_as_dict): Fixed call with args=NULL
	ogg123.py works now

	* src/*.h src/*.c: Changed to C-style comments

	* test/ogg123.py: Removed stupid print statement

5-14-2001  Andrew H. Chatham <andrew.chatham@duke.edu>
	* setup.py: Bumped to version 0.3

	* src/general.[ch]: Removed arg_to_64 and use ogg-python's arg_to_int64

	* src/general.h: Fixed preprocessor warnings

	* src/py*.c: Methods which take no arguments now require no arguments
	Made functions match Python-expected signatures

	* test/short.py: Fixed to match new Python ao module. I think I broke
	something, so test/ogg123.py doesn't work at the moment
	
1-17-2001 Andrew H. Chatham <andrew.chatham@duke.edu>
	* All was essentially created, since this is the first separation
	of pyvorbis and pyogg
	
11-29-2000 Andrew H. Chatham <andrew.chatham@duke.edu>
	* test/ogg123.py: Added support for linuxaudiodev. Factored parts
	of Player class into a superclass and made separate AOPlayer and
	LADPlayer subclasses.

	* test/short.py: added
	
11-28-2000 Andrew H. Chatham <andrew.chatham@duke.edu>
	* src/_oggmodule.c (init_ogg): Stuff PyOgg_Error into a
	Py_CObject.
	* src/vorbismodule.c (initvorbis): Get PyOgg_Error back out to
	inherit from.
	* test/ogg123.py: Change to use new module arrangement.

11-28-2000 Andrew H. Chatham <andrew.chatham@duke.edu>
	* setup.py: Changed leftover MySQLdb reference.
	Went back to having a separate _oggmodule and vorismodule.

	* oggmodule.[ch]: Moved to _oggmodule.[ch]

	* general.[ch]: Created to house any functions needed by more than
	one module. Currentnly houses arg_to_64.

	* src/pyvorbisinfo.c: Changed reference to mappingmethod struct in
	initializer to a pointer. Removed unused variables (mostly casts of *self)
	(py_comment_subscript): Added unicode support
	(py_comment_assign): Added unicode support
	(get_caps_key): Changed to (make_caps_key). Now takes size argument.