@@ -1,3 +1,9 @@
+8-30-2001  Andrew H. Chatham <andrew.chatham@duke.edu>
+	* src/pyvorbisfile.c (py_ov_pcm_seek[_page]) Use the implementation
+	  of arg_to_int64 provided by the ogg module
+
+	* test/*.py: updated to use the new ao module's API
+	
 6-01-2001  Andrew H. Chatham <andrew.chatham@duke.edu>
 	* src/pyvorbisinfo.c  (py_comment_as_dict): Fixed call with args=NULL
 	ogg123.py works now
